# xcode-discord-rpc

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: brew.yml
Formula/: xcode-discord-rpc.rb
src/: main.rs
