[package]
name = "xcode-discord-rpc"
version = "0.1.1"
edition = "2021"
authors = ["Yumi Izumi <me@yumiizumi.com>"]
license = "MIT"
repository = "https://github.com/izyumidev/xcode-discord-rpc"
homepage = "https://github.com/izyumidev/xcode-discord-rpc"
description = "A simple Discord Rich Presence client for Xcode"
readme = "README.md"
keywords = ["xcode", "discord", "rich", "presence", "rpc"]
categories = ["development-tools"]

[dependencies]
discord-rich-presence = "0.2.3"
cargo-watch = "8.4.0"
chrono = "0.4.31"
